[tool.poetry]
name = "roadcarnage"
version = "0.1.0"
description = "Python Game"
authors = ["VinCheetah <vincent.gardies@ens-lyon.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
